@@ -19,7 +19,6 @@ import java.time.Duration;
 import java.time.OffsetDateTime;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Locale;
@@ -129,7 +128,7 @@ public class ModelTestCaseUtil {
             return "http://example.org/" + URLEncoder.encode(randomString(), StandardCharsets.UTF_8);
         } else if (type == ClassType.OBJECT || type == ClassType.BINARY_DATA) {
             // unknown type, use a simple string
-            return "data" + randomString();
+            return ClassType.STRING.defaultValueExpression("data" + randomString());
         } else if (type instanceof EnumType) {
             IType elementType = ((EnumType) type).getElementType();
             List<String> values
@@ -232,7 +231,7 @@ public class ModelTestCaseUtil {
             if (modelNeedsFlatten) {
                 serializedNames = ClientModelUtil.splitFlattenedSerializedName(serializedName);
             } else {
-                serializedNames = Collections.singletonList(serializedName);
+                serializedNames = List.of(serializedName);
             }
             addToJsonObject(jsonObject, serializedNames, value);
         }
